--- a/index06.html
+++ b/index06.html
@@ -24,6 +24,7 @@
         </ul>
     </div>
     <h2 class="hello">Hello Javascript</h2>
+    <div id="mybox">This is a box</div>
     <div class="box">Frist box</div>
     <div class="box"> secound box</div>
     <div class="box">Thrid box</div>
